java mind diagram: GC, zk